# greenalysis

./: .gitignore  README.md  Untitled.ipynb  generate_points.py  main.ipynb  main.py  maps.ipynb  pyproject.toml  x.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  main-checkpoint.ipynb
