[project]
name = "greenalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiona>=1.10.1",
    "gdal>=3.11.3",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tifffile>=2025.8.28",
]
